--- a/product.html
+++ b/product.html
@@ -116,7 +116,7 @@
 
       <!-- products -->
 
-      <div class="container-fluid">
+      <div class="container-fluid" id="mainContainer">
             <div class="row" id="main">
 
                 <div class="item col-lg-4 col-md-6 col-sm-12">
